Expand core test coverage for utility and Oshi controller paths
Agent-Logs-Url: https://github.com/psi-probe/psi-probe/sessions/de632830-fc1b-4191-b65d-75a35e2605fa

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>